Enhance README with class descriptions and architecture
Expanded the README to include detailed explanations of the architecture and functionality of various Java classes related to prime gaps.